[package]
name = "planning-poker"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.73"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
